Updated css compatibility

--- a/docs/assets/css/md_desktop.css
+++ b/docs/assets/css/md_desktop.css
@@ -171,3 +171,8 @@
   					margin:  auto;
   					object-position: 50% 50%;
 					}
+
+			img.streaming {
+				width: 5vw;
+				padding: 0px 1vw 0px 1vw;
+			}
