--- a/docs/assets/css/md_mobile.css
+++ b/docs/assets/css/md_mobile.css
@@ -166,7 +166,7 @@
 
 			img.image {
 					display: block;
-  					width: 100%;
+  					width: 100vw;
   					height: auto;
   					margin:  auto;
   					object-position: 50% 50%;
